<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">圣经问答</string>
    <string name="no_network">没网喽</string>
    <string name="main_answer">答题</string>
    <string name="main_share">分享</string>
    <string name="main_mine">我的</string>

    <string name="crop__saving" translatable="false">正在保存图片…</string>
    <string name="crop__wait" translatable="false">请稍等…</string>
    <string name="crop__pick_error" translatable="false">没有可用的图像来源</string>

    <string name="crop__done" translatable="false">确认</string>
    <string name="crop__cancel" tools:ignore="ButtonCase" translatable="false">取消</string>
    
    <string name="upload_ing_1">暂时没有审核中记录哦</string>
    <string name="upload_ing_2">上传答题后会自动进入审核中队列</string>
    <string name="upload_ok_1">暂时没有审核成功记录哦</string>
    <string name="upload_ok_2">点击右上角上传吧</string>
    <string name="upload_no_1">暂时没有审核失败记录哦</string>
    <string name="upload_no_2"></string>

    <string name="upload">暂时没有任何答题</string>
    <string name="upload_2">可点击右上角上传答题</string>

    <string name="load_over">已经到底啦</string>
    <string name="load_ing">加载中</string>

    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="facebook">四福音</string>
    <string name="twitter">历史诗歌书</string>
    <string name="google">摩西五经</string>
    <string name="linkedin">大小先知书</string>
    <string name="wordpress">圣经</string>
    <string name="myspace">新约书信</string>

    <string name="text_book">写笔记</string>
    <string name="text_book_name">标题</string>
    <string name="text_time_label">内容</string>
    <string name="text_book_delete">删除</string>
    <string name="text_book_save">保存</string>


    <string name="retract">收起</string>
    <string name="spread">展开</string>


    <string name="help_1_title">\t\t问：答题中，没做完15道题就结束了，为什么？</string>
    <string name="help_1_content">\t\t答：无论在什么情况下，连续答错两道题自动结算成绩。注意：不是累计哦。</string>
    <string name="help_2_title">\t\t问：我答完了15道题，为什么得分比中途结束的成绩少？</string>
    <string name="help_2_content">\t\t答：分数计算方法：\n\t\t\t\t初始化（开始）时，答对一题加100，答错一题减90。\n\t\t\t\t连续答对时加分规律：+100,+200,+300...\n\t\t\t\t连续答错时减分规律：-90，-180\n\t\t\t\t打破连对或连错将恢复初始化。\n\t\t所以，最后的得分多少不只在于答了多少题哦。</string>
    <string name="help_3_title">\t\t问：答题中怎样暂停倒计时？</string>
    <string name="help_3_content">\t\t答：为防止暂停后查找答案的情况出现，现无法直接暂停。但选择当前题的答案并确定时，时间是不会变的，则可以视为暂停。</string>
    <string name="help_4_title">\t\t问：错题记录在哪？</string>
    <string name="help_4_content">\t\t答：时间轴，这里包括您的答题记录，点击每条记录时就发现错题喽。</string>
    <string name="help_5_title">\t\t问：在另一个手机登录我的账号时，时间轴都没了。</string>
    <string name="help_5_content">\t\t答：请点击时间轴的右上角第二个符号，可以将时间轴同步到账号的云端，在其它手机登录账号时则可以同步。 \n\t\t提示：右上角第一个符号是删除哦。</string>
    <string name="help_6_title">\t\t问：“一起答”里面为什么是空的？</string>
    <string name="help_6_content">\t\t答：“一起答”是需要联网的哦。在网络不流畅的情况也可能会导致加载缓慢。</string>


    <string name="help_7_content">\t\t答：“一起答”是需要联网的哦。在网络不流畅的情况也可能会导致加载缓慢。</string>

    <string name="got_titletext">Who Will Ride The Third Dragon In \'Game Of Thrones\' Season 7?</string>
    <string name="got_image_url">http://cdn.idigitaltimes.com/sites/idigitaltimes.com/files/styles/image_embed/public/2016/04/29/game-thrones-daenerys-dragon-drogon.jpg</string>
    <string name="got_subtext">Game of Thrones season 7 will kick off a new age of Game of Thrones, with the show becoming a true epic fantasy for the first time. Don’t worry, it will remain a high political drama too, but the war between ice and fire isn’t far off now, and Daenerys Targaryen seems destined to lead the fight</string>
    <string name="got_summarytext">You\'ve shown interest in Game of Thrones series</string>


</resources>
