<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.gamedemo.activity.MainActivity">



    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </android.support.v4.view.ViewPager>


  <LinearLayout
      android:id="@+id/main_bottome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="@dimen/height_actionbar"
      android:orientation="horizontal"
      android:weightSum="3"
      android:layout_alignParentBottom="true"
      android:background="@color/white"
      >
      <LinearLayout
          android:id="@+id/ll_main_answer"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_gravity="center"
          android:gravity="center"
          >
          <ImageView
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:src="@drawable/icon_temp"
              android:layout_gravity="center"
              android:gravity="center"
              />

          <TextView
              android:id="@+id/tv_answer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_answer"
              android:textSize="@dimen/textsize_14"
              android:layout_gravity="center"
              android:gravity="center"
              android:textColor="@color/colorPrimary"
              />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/ll_main_share"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_gravity="center"
          android:gravity="center"
          >
          <ImageView
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:src="@drawable/icon_temp"
              android:layout_gravity="center"
              android:gravity="center"
              />

          <TextView
              android:id="@+id/tv_share"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_share"
              android:textSize="@dimen/textsize_14"
              android:layout_gravity="center"
              android:gravity="center"
              android:textColor="@color/textcolor_m"
              />
      </LinearLayout>
      <LinearLayout
          android:id="@+id/ll_main_mine"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_gravity="center"
          android:gravity="center"
          >
          <ImageView
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:src="@drawable/icon_temp"
              android:layout_gravity="center"
              android:gravity="center"
              />

          <TextView
              android:id="@+id/tv_mine"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/main_mine"
              android:textSize="@dimen/textsize_14"
              android:layout_gravity="center"
              android:gravity="center"
              android:textColor="@color/textcolor_m"
              />

      </LinearLayout>

  </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignTop="@id/main_bottome"
        android:background="#3000"/>

</RelativeLayout>
